@@ -15,8 +15,10 @@
 		"0.0.0.0/32"
 	],
 	"graph" : {
-		"node_text_size" : 10,
-		"link_text_size" : 9,
-		"include_svi" : 0
+		"node_text_size" : 12,
+		"link_text_size" : 10,
+		"title_text_size" : 15,
+		"include_svi" : 0,
+		"include_lo" : 0
 	}
 }
